Loop Select should not become a Redo History Item. #30375

Closed
opened 2012-02-27 04:53:35 +01:00 by Ryan King · 3 comments

%%%If you select an Edge Loop with Alt+RMB it gets inserted as an item in the Redo History.

What this means is that you cannot sequentially delete a series of Edge Loops with Shift+r -- you have to hit F3 then 2 to activate the "Delete Loop" command from before.

I do not see the value of having the Loop Select in the Redo History. You cannot repeat it later on (either with Shift+r or with the F3 menu). Not having it in the way would enable other commands to use Shift+r.

Thank you.%%%

%%%If you select an Edge Loop with Alt+RMB it gets inserted as an item in the Redo History. What this means is that you cannot sequentially delete a series of Edge Loops with Shift+r -- you have to hit F3 then 2 to activate the "Delete Loop" command from before. I do not see the value of having the Loop Select in the Redo History. You cannot repeat it later on (either with Shift+r or with the F3 menu). Not having it in the way would enable other commands to use Shift+r. Thank you.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Select edge loop and ring will now avoid registering in undo list (svn rev44482).
Thanks for the report, closing.%%%

%%%Select edge loop and ring will now avoid registering in undo list (svn rev44482). Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30375
No description provided.