Select edge loop and edge rings operators can't be redone form history menu so registering them seems to be kind of useless because things like deleting edge loops with Shift-R command is impossible.

This commit will resolve issue #30375: Loop Select should not become a Redo History Item.